--- a/responsive/sample-3/index.html
+++ b/responsive/sample-3/index.html
@@ -11,10 +11,18 @@
 
 <body>
     <div class="my-container">
-        <div class="my-item">1</div>
-        <div class="my-item">2</div>
-        <div class="my-item">3</div>
-        <div class="my-item">4</div>
+        <div class="my-item self-top" style="padding-top: 30px;">A</div>
+        <div class="my-item order-4" style="padding-top: 80px;">I</div>
+        <div class="my-item order-1 grow-1" style="padding-top: 50px;">C</div>
+        <div class="my-item order-1 grow-2" style="padding-top: 10px;">D</div>
+        <div class="my-item order-2 self-center" style="padding-top: 80px;">E</div>
+    </div>
+    <div class="my-container">
+        <div class="my-item-2 order-2" style="padding-top: 100px;">F</div>
+        <div class="my-item-2 order-3 shrink-2" style="padding-top: 50px;">G</div>
+        <div class="my-item-2 order-3 shrink-1" style="padding-top: 10px;">H</div>
+        <div class="my-item-2 order-4" style="padding-top: 100px;">J</div>
+        <div class="my-item-2" style="padding-top: 70px;">B</div>
     </div>
 </body>
 </html>
