--- a/sample/svg/1/index.html
+++ b/sample/svg/1/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <img src="asset/sample.svg" alt="Sample SVG">
+    <object data="asset/sample.svg" type="image/svg+xml"></object>
 </body>
 </html>
