JS samples of operators and selectors

--- a/sample/js/operator/index.html
+++ b/sample/js/operator/index.html
@@ -8,14 +8,21 @@
 </head>
 <body>
     <script>
-        var assign = 2;
-        console.log('assign = 2', assign);
+        console.log('assign = 2', "atrinuation a value to variable");
         console.log('plus = 2 + 2', 2 + 2);
         console.log('minus = 2 - 2', 2 - 2);
         console.log('multiply = 2 * 2', 2 * 2);
         console.log('module = 4 % 2', 4 % 2);
         console.log('divide = 4 / 2', 4 / 2);       
-
+        console.log('equal = 2 == 2', 2 == 2);
+        console.log('not equal = 2 != 2', 2 != 2);
+        console.log('bigger = 2 > 2', 2 > 2);
+        console.log('bigger or equal = 2>= 2', 2 >= 2);
+        console.log('less = 2 > 2', 2 < 2);
+        console.log('less or equal = 2>= 2', 2 <= 2);
+        console.log('(60 && 50) > 50', (60 && 50) > 50);
+        console.log('2 == "2"', 2 == "2");
+        console.log('true == "1"', true == "1");
     </script>
 </body>
 </html>
